--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "wgpu-cube"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "wgpu_cube"
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 winit = "0.30"
 pollster = "0.3"
@@ -15,3 +19,15 @@ bitflags = "2.4"
 image = "0.25"
 hecs = "0.10"
 gltf = "1.4"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "HtmlCanvasElement",
+    "Element",
+    "HtmlElement",
+    "Node",
+    "CssStyleDeclaration",
+] }
