--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ instant = { version = "0.1", features = ["wasm-bindgen"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
+console_error_panic_hook = "0.1"
+console_log = "1.0"
 web-sys = { version = "0.3", features = [
     "Document",
     "Window",
