--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ instant = { version = "0.1", features = ["wasm-bindgen"] }
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
 console_log = "1.0"
+wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
     "Document",
     "Window",
