--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,14 @@ image = "0.25"
 hecs = "0.10"
 gltf = "1.4"
 instant = { version = "0.1", features = ["wasm-bindgen"] }
+base64 = "0.13"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 console_error_panic_hook = "0.1"
 console_log = "1.0"
 wasm-bindgen-futures = "0.4"
+js-sys = "0.3"
 web-sys = { version = "0.3", features = [
     "Document",
     "Window",
@@ -34,4 +36,6 @@ web-sys = { version = "0.3", features = [
     "HtmlElement",
     "Node",
     "CssStyleDeclaration",
+    "XmlHttpRequest",
+    "XmlHttpRequestResponseType",
 ] }
