--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ hecs = "0.10"
 gltf = "1.4"
 instant = { version = "0.1", features = ["wasm-bindgen"] }
 base64 = "0.13"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
