--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ instant = { version = "0.1", features = ["wasm-bindgen"] }
 base64 = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rayon = "1.8"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
