--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ name = "wgpu_cube"
 crate-type = ["cdylib", "rlib"]
 
 [features]
+default = []
 wasm = []
+egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]
 
 [dependencies]
 winit = "0.30"
@@ -27,6 +29,24 @@ base64 = "0.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rayon = "1.8"
+
+# Egui dependencies (optional)
+# Use the release-0.33.0 branch for egui
+[dependencies.egui]
+git = "https://github.com/emilk/egui.git"
+branch = "release-0.33.0"
+optional = true
+features = [] # add any features you need
+
+[dependencies.egui-wgpu]
+git = "https://github.com/emilk/egui.git"
+branch = "release-0.33.0"
+optional = true
+
+[dependencies.egui-winit]
+git = "https://github.com/emilk/egui.git"
+branch = "release-0.33.0"
+optional = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
