--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rayon = "1.8"
 rand = { version = "0.8", features = ["small_rng"] }
+half = "2.4"
 
 # Egui dependencies (optional)
 # Use the release-0.33.0 branch for egui
